fixed overflow of footer

--- a/communityhub/src/css/awesomestyles.less
+++ b/communityhub/src/css/awesomestyles.less
@@ -982,7 +982,7 @@
             padding: 0;
         }
         .region-content-bottom {
-            .container
+            width:100%:;
         }
         h2 {
             .make-xs-column(12);
